--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "api_spec",
   "version": "1.0.0",
   "description": "API spec definition",
+  "type": "module",
+  "exports":{
+    ".": {
+      "types": "dist/esm/index.d.ts",
+      "require": "dist/cjs/index.js",
+      "import": "dist/esm/index.js"
+    }
+  },
   "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/esm/index.d.ts",
   "scripts": {
     "server": "npx tspec generate --specPathGlobs src/**/*.ts && npx tspec server --specPathGlobs src/**/*.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
