--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     }
   },
   "scripts": {
-    "server": "npx tspec generate --specPathGlobs src/**/*.ts && npx tspec server --specPathGlobs src/**/*.ts",
+    "server": "npx tspec generate --specPathGlobs \"src/**/*.ts\" && npx tspec server --specPathGlobs \"src/**/*.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx rollup -c"
   },
