--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "license": "ISC",
     "peerDependencies": {
         "joi": "^17.13.3",
-        "joi-extract-type": "^15.0.8",
-        "tspec": "^0.1.116"
+        "joi-extract-type": "^15.0.8"
     },
     "devDependencies": {
         "@babel/cli": "^7.26.4",
@@ -59,5 +58,9 @@
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.2"
+    },
+    "dependencies": {
+        "joi-to-json": "^4.3.0",
+        "tspec": "file:../tspec-with-joi-to-json/packages/tspec/tspec-0.1.116.tgz"
     }
 }
