--- a/package.json
+++ b/package.json
@@ -37,11 +37,6 @@
     },
     "author": "",
     "license": "ISC",
-    "peerDependencies": {
-        "joi": "^17.13.3",
-        "joi-extract-type": "^15.0.8",
-        "joi-to-json": "^4.3.0"
-    },
     "devDependencies": {
         "@babel/cli": "^7.26.4",
         "@babel/core": "^7.26.0",
@@ -65,6 +60,8 @@
         "typescript": "^5.7.2"
     },
     "dependencies": {
-        "tspec": "file:../tspec-with-joi-to-json/packages/tspec/tspec-0.1.116.tgz"
+        "tspec": "file:../tspec-with-joi-to-json/packages/tspec/tspec-0.1.116.tgz",
+        "zod": "^3.24.1",
+        "zod-to-json-schema": "^3.24.1"
     }
 }
