--- a/package.json
+++ b/package.json
@@ -57,13 +57,12 @@
         "rollup-plugin-dts": "^6.1.1",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "ts-node": "^10.9.2",
+        "tspec": "file:../tspec-with-joi-to-json/packages/tspec/tspec-0.1.116.tgz",
         "typescript": "^5.7.2"
-    },
-    "dependencies": {
-        "tspec": "file:../tspec-with-joi-to-json/packages/tspec/tspec-0.1.116.tgz"
     },
     "peerDependencies": {
         "zod": "^3.24.1",
         "zod-to-json-schema": "^3.24.1"
-    }
+    },
+    "packageManager": "yarn@4.6.0"
 }
